# vorticity

./: CMakeLists.txt  ChangeLog  README
CMakeModules/: DetermineProcessor.cmake  FindCG.cmake  FindGLEW.cmake
avr/: CMakeLists.txt
avr/cmake/Modules/: FindAVR.cmake
avr/examples/cube/: CMakeLists.txt  cube.cpp
avr/include/avr/: avr++.h  avrfile.h  avrmaterial.h  avrmath.h  avrmesh.h  avrtexture.h  avrutil.h
avr/src/: avrfile.cpp  avrmaterial.cpp  avrmesh.cpp  avrtexture.cpp  avrutil.cpp
doc/: avr_spec.txt
examples/: CMakeLists.txt
examples/model_viewer/: CMakeLists.txt  model_viewer.cpp  model_viewer.h
examples/rotating_boxes/: CMakeLists.txt  rotating_boxes.cpp  rotating_boxes.h
include/vorticity/: vorticity.h  vorticity_base.h
include/vorticity/core/: application.h  core.h  entity.h  fonts.h  renderer.h  timer.h
include/vorticity/io/: iff_reader.h  image_loader.h  iobase.h  stdmesh_loader.h  text_loader.h
include/vorticity/overlay/: overlay.h
include/vorticity/ppfx/: ppfx.h  ppfx_hdr.h  ppfx_simple.h
include/vorticity/render/: opengl.h
include/vorticity/resources/: backdrop.h  image.h  material.h  mesh.h  resource.h  rset.h  shader.h  submesh.h
include/vorticity/sg/: array.h  attribute.h  controller.h  keyframe_ctrl.h  modifier.h  node.h  node_camera.h  node_dummy.h  node_lc.h  node_light.h  node_light_sm.h  node_material.h  node_mesh.h  node_ppfx.h  node_sc.h  node_shader.h  object.h  proxy.h  reference.h  vevaluate.h  vrender.h  vrender_simple.h  xnode.h
include/vorticity/types/: math.h  matrix4.h  string.h  vector2.h  vector3.h  vector4.h
src/: CMakeLists.txt  config.h  vorticity_base.h
src/core/: application.cpp  core.cpp  entity.cpp
src/io/: iff_reader.h  image_loader.cpp  iobase.cpp  iobase.h  stdmesh_loader.cpp  text_loader.cpp
src/overlay/: overlay.cpp
src/ppfx/: ppfx.cpp  ppfx_hdr.cpp  ppfx_simple.cpp
src/render/: gloverlay.cpp  gloverlay.h  opengl.cpp
src/resources/: backdrop.cpp  image.cpp  material.cpp  mesh.cpp  rset.cpp  shader.cpp  submesh.cpp
src/sg/: array.cpp  attribute.cpp  controller.cpp  modifier.cpp  node.cpp  node_camera.cpp  node_dummy.cpp  node_light.cpp  node_light_sm.cpp  node_material.cpp  node_mesh.cpp  node_shader.cpp  object.cpp  proxy.cpp  reference.cpp  vevaluate.cpp  vrender.cpp  vrender_simple.cpp  xnode.cpp
src/shaders/: blur.cgfx  debug.cgfx  extract.cgfx  hdr_tonemap.cgfx  lambert.cgfx  phong.cgfx  simple.cgfx
